--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 dj-database-url==0.5.0
 Django==3.2.5
+django-heroku==0.3.1
 gunicorn==20.1.0
+lxml==4.6.3
 psycopg2==2.9.1
 python-decouple==3.4
 pytz==2021.1
+spyne==2.13.16
 whitenoise==5.2.0
